//============================================================================//
//                                                                            //
//                Copyright Â© 2015 - 2020 Subterranean Security               //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation at:                                //
//                                                                            //
//    https://mozilla.org/MPL/2.0                                             //
//                                                                            //
//=========================================================S A N D P O L I S==//
syntax = "proto3";

package plugin.upgrade;

import "com/sandpolis/plugin/upgrade/msg_upgrade.proto";

option java_package = "com.sandpolis.plugin.upgrade";

message UpgradeMSG {
    oneof payload {

        // msg_upgrade
        RQ_ManagerMetadata              rq_manager_metadata             =    1;
        RS_ManagerMetadata              rs_manager_metadata             = 1001;
    }
}
